[gd_scene load_steps=5 format=3 uid="uid://dwta0r8houv6a"]

[ext_resource type="Script" path="res://UI/Options/Options.gd" id="1_ky23k"]
[ext_resource type="PackedScene" uid="uid://c7b7w3kk3hs66" path="res://UI/background.tscn" id="2_ti8p4"]
[ext_resource type="Theme" uid="uid://dhq1th0sqj2u7" path="res://UI/Fonts/Text_font.tres" id="3_r4er5"]
[ext_resource type="Script" path="res://UI/focusUI.gd" id="3_undj6"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ky23k")

[node name="Background" parent="." instance=ExtResource("2_ti8p4")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -20.0
offset_right = 22.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_r4er5")

[node name="CameraLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Camera sensitivity"

[node name="CameraSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 6.0
value = 1.0

[node name="MusicBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Music"

[node name="Music" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Volume
"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="anti-aliasing" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Anti-aliasing"

[node name="Fullscreen" type="CheckBox" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Fullscreen"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Back
"
script = ExtResource("3_undj6")

[connection signal="value_changed" from="MarginContainer/VBoxContainer/CameraSlider" to="." method="_on_camera_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/MusicBox" to="." method="_on_music_box_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/anti-aliasing" to="." method="_on_antialiasing_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
